--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header.header-scrolled, #header.header-inner-pages {
-  background: #9b2f29b7;
+  background: #9b2f29f2;
   padding: 12px 0;
 }
 
@@ -371,7 +371,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top center;
+  background: url("../img/hero-bg.png") top center;
   background-size: cover;
   position: relative;
   padding: 0;
@@ -1500,13 +1500,13 @@ section {
 #footer {
   background: #121d24;
   padding: 0 0 30px 0;
-  color: #fff;
+  color: rgb(255, 255, 255);
   font-size: 14px;
 }
 
 #footer .footer-top {
-  background: #15222b;
-  border-bottom: 1px solid #1d303c;
+  background: #ffffff;
+  border-bottom: 1px solid #dcf2ff;
   padding: 60px 0 30px 0;
 }
 
@@ -1527,14 +1527,14 @@ section {
   line-height: 24px;
   margin-bottom: 0;
   font-family: "Raleway", sans-serif;
-  color: #fff;
+  color: rgb(97, 97, 97);
 }
 
 #footer .footer-top .social-links a {
   font-size: 18px;
   display: inline-block;
   background: rgba(255, 255, 255, 0.08);
-  color: #fff;
+  color: rgb(97, 97, 97);
   line-height: 1;
   padding: 8px 0;
   margin-right: 4px;
@@ -1547,14 +1547,14 @@ section {
 
 #footer .footer-top .social-links a:hover {
   background: #9b2e29;
-  color: #fff;
+  color:rgb(255, 255, 255);
   text-decoration: none;
 }
 
 #footer .footer-top h4 {
   font-size: 16px;
   font-weight: 600;
-  color: #fff;
+  color: rgb(0, 0, 0);
   position: relative;
   padding-bottom: 12px;
 }
@@ -1571,7 +1571,7 @@ section {
 
 #footer .footer-top .footer-links ul i {
   padding-right: 2px;
-  color: #ff5e31;
+  color: #9b2e29;
   font-size: 18px;
   line-height: 1;
 }
@@ -1587,7 +1587,7 @@ section {
 }
 
 #footer .footer-top .footer-links ul a {
-  color: #fff;
+  color: rgb(97,97,97);
   transition: 0.3s;
   display: inline-block;
   line-height: 1;
@@ -1663,12 +1663,12 @@ section {
   transition: 0.5s;
   color: #fff;
   background: #9b2e29;
-  border: 2px solid #9b2e29;
+  border: 2px solid #ffffff00;
   margin: 0 auto;
 }
 .dona-btn:hover {
   border-color: #fff;
-  color:#121d24;
+  color:#ffffff;
 }
 
 
@@ -1680,6 +1680,11 @@ section {
   outline: none;
 
 }
+
+#dona.dona-scrolled{
+    border-color: #fff;
+}
+
 .mobile-nav #dona {
   display: inline;
   color: #ffffff;
@@ -1689,3 +1694,12 @@ section {
   outline: none;
 }
 
+#footer-h3{
+    font-size: 25px;
+}
+.footer-list{
+    color: rgb(97,97,97);
+}
+#pio-foot{
+    color:black;
+}
