--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1703,3 +1703,11 @@ section {
 #pio-foot{
     color:black;
 }
+
+
+.form-google{
+    position: relative;
+    height: 0;
+    overflow:auto;
+
+}
