--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,10 @@ h1, h2, h3, h4, h5, h6 {
   font-family: "Raleway", sans-serif;
 }
 
+.comite-icon {
+    margin-left: 20%;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   :root {
     scroll-behavior: auto;
